test: 테스트 오류 수정 및 상수 적용